--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@
     margin: 0px auto;
     max-width: 1180px; /* ⚠️ ОБРАТИ ВНИМАНИЕ - максимальная ширина увеличилась на размер отступов, чтобы ширина контента оставалась корректной */
     /* 📍 Свойство для внутрених отступов */
-    padding: 23px 602px 23px 20px;
+    padding: 0px 20px;
 }
 
 body {
     font-family: "Inter", sans-serif; 
     color: #303030;
     /* 📍 Минимальная ширина */ 
+    min-width: 375px;
 }
 
 header {
@@ -31,7 +32,7 @@ header span {
 
 .main-section {
     background-color: #fafaff;
-    padding: 60px 0;
+    padding-bottom: 100px;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -144,6 +145,9 @@ select:hover,
 form {
     margin-bottom: 40px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .text-field {
@@ -215,24 +219,34 @@ footer {
 
     .main-section .wrapper {
         /* 📍 Свойства для расположения элементов и отступа между ними */
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 60px;
     }
 
     .main-image {
         /* 📍 Максимальная ширина для главного изображения в % */
+        max-width: 100%;
     }
 
     .text-wrapper {
         /* 📍 Максимальная ширина для блока с текстом */
+        max-width: 560px;
     }
 
     .about-section {
     /* 📍 Внутренний отступ сверху и снизу */
+    padding: 60px 0px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .info-wrapper {
         /* 📍 Свойства для расположения 2-x списков и отступа между ними */
+        display: flex;
+        flex-direction: row;
+        gap: 60px;
     }
 }
 
