--- a/style.css
+++ b/style.css
@@ -254,18 +254,23 @@ footer {
 @media screen and (max-width: 576px) {
     .main-section {
         /* 📍 Внутренние отступы сверху и снизу */
+        padding: 30px 0px 60px;
     }
 
     .main-section .wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
+        gap: 40px;
     }
 
     .main-title {
         /* 📍 Размер шрифта */
+        font-size: 36px;
     }
 
     .about-section .wrapper,
     .info-wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
+        gap: 50px;
+
     }
 }
